style.css
body{
    background-color: rgba(255, 255, 255, 0.815);
    overflow-x: hidden;
    scroll-behavior: smooth;
}
html{
    overflow: visible;
    scroll-behavior: smooth;
}


.top{
    position: relative;
    margin:0 auto;
    height:40vh;
    width: 100vw;
    display: grid;
    justify-content: center;
    place-items: center;
    align-content: center;
    color: rgb(124, 120, 120);
    background-color: RGB(107, 193, 226);
}
.id{
    font-family: cursive;
    font-size: 2.5vw;
}
.cimg{
    position: absolute;
    width: 100vw;
    margin-top: -5px;
    margin-left: 0px;
}
.pimg{
    position: relative;
    height: 110px;
    padding-top: 10px;
}

.name{
    color: rgb(250, 243, 243);
    font-size: 60px;
    padding-left: 15px;
}
ul {
    list-style-type: none;
}
.about{ 
    margin-top: 24vw;
}
#about{
    background-color: rgba(231, 229, 224, 0.027);
    padding: 7px;
    font-size: 17px;
}
#section02{
    text-align: center;
}
p{
    font-family: Courier;
}
.btn-light{
    background-color: transparent;
}
.btn-light:hover{
    background-color: rgba(0, 162, 255, 0.301);
}
.card-header{
    background-color: #7ac4f5;
}
.card{
    margin-top: 25px;
    border-radius: 20px;
}
.animation{
    position: relative;
    overflow: hidden;
}
.plane{
    position: relative;
    height: 95px;
    top: 30%;
}
footer{
    height: 20px;
    background-color: rgba(63, 189, 189, 0.596);
    margin-top: 20px;
}

.skillsection{
    margin-top: 45px;
    margin-bottom: 100px;
}

.skillbar {
    position:relative;
    display:block;
    margin-bottom:15px;
    margin-top: 25px;
    width:100%;
    background:#eee;
    height:20px;
    border-radius:3px;
    -moz-border-radius:3px;
    -webkit-border-radius:3px;
    -webkit-transition:0.4s linear;
    -moz-transition:0.4s linear;
    -ms-transition:0.4s linear;
    -o-transition:0.4s linear;
    transition:0.4s linear;
    -webkit-transition-property:width, background-color;
    -moz-transition-property:width, background-color;
    -ms-transition-property:width, background-color;
    -o-transition-property:width, background-color;
    transition-property:width, background-color;
}
.skillbar-title {
    position:absolute;
    top:0px;
    left:0;
    font-weight:bold;
    font-size:13px;
    color:#fff;
    background:#6adcfa;
    -webkit-border-top-left-radius:3px;
    -webkit-border-bottom-left-radius:4px;
    -moz-border-radius-topleft:3px;
    -moz-border-radius-bottomleft:3px;
    border-top-left-radius:3px;
    border-bottom-left-radius:3px;
}

.skillbar-title span {
    display:block;
    background:rgba(0, 0, 0, 0.1);
    padding:0 20px;
    height:20px;
    line-height:20px;
    -webkit-border-top-left-radius:3px;
    -webkit-border-bottom-left-radius:3px;
    -moz-border-radius-topleft:3px;
    -moz-border-radius-bottomleft:3px;
    border-top-left-radius:3px;
    border-bottom-left-radius:3px;
}
.skillbar-bar {
    height:20px;
    width:0px;
    background:#6adcfa;
    border-radius:3px;
    -moz-border-radius:3px;
    -webkit-border-radius:3px;
    float: left;
}
    
.skill-bar-percent {
    position:absolute;
    right:10px;
    top:0;
    font-size:11px;
    height:15px;
    line-height:15px;
    color:#444;
    color:rgba(0, 0, 0, 0.4);
}

/* top button */
#myBtn {
    display: none;
    position: fixed;
    bottom: 20px;
    right: 30px;
    z-index: 99;
    font-size: 18px;
    border: none;
    outline: none;
    background-color: rgb(94, 193, 240);
    color: white;
    cursor: pointer;
    padding: 15px;
    border-radius: 4px;
  }
  
  #myBtn:hover {
    background-color: #555;
  }

